# gol

./: CMakeLists.txt  README.md  SDL_window.h  board.h  byte.cpp  byte.h  cell.h  console_win.cpp  console_win.h  engine_traits.h  game_engine.cpp  game_engine.h  main.cpp  qt.h  win_api_main.cpp  window.cpp  window.h  window_win_api.cpp  window_win_api.h  window_winapi.cpp  window_winapi.h
gol_base/: cell.cpp  game_engine.cpp  game_engine.h
